
	* lib/ocaml.cygclass (ocaml_install): Don't define DOCDIR.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/lua.cygclass: New cygclass for Lua modules.

	* lib/cvs.cygclass: Handle '/' in CVS_MODULE.

	* lib/R.cygclass: Define R_INCLUDEDIR.

	* lib/docbook.cygclass: Some fixes for docbook-xml-simple.

	* lib/R.cygclass:
	* lib/distutils.cygclass:
	* lib/perl.cygclass:
	Auto-define ORIG_PN only if PN indicates we are building a module.

	* lib/apache.cygclass: Define APREQ_CONFIG, APREQ_CFLAGS, APREQ_LIBS.

	* bin/cygport.in (__prepstrip):
	Don't strip OCaml bytecode executables, based on file magic test.

	* lib/ocaml.cygclass (OCAML_SITEDIR): Fix for 3.10 and new findlib.
	(ocaml_install): Provide default ocamlfind-based install function.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/docbook.cygclass: New cygclass for DocBook SGML/DSSSL/XML/XSL.

	* lib/berkdb.cygclass: Code cleanup.
	(berkdb_compile): JAVA and friends defined by java.cygclass.
	(berkdb_install): Override emode, fmode, strip to minimize patches.
	(berkdb_postinst): Utilities vary per version, so auto-generate list.

	* bin/doexe: Install .la files with libtool.

	* data/mirrors (mirror_debian): Added.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.7 ***

	* bin/make_managed_mount: Prefix PN to tarball name.

	* bin/doman:
	* bin/newman: Support Tcl .n manpages.

	* lib/apache2.cygclass (apache_compile): Accept APACHE_MOD_NAME.
	(doapacheconf): Append rather than overwrite.
	(apache_postinst): Automatically enter LoadModule commands to httpd.conf.

	* bin/cygport.in (__check_unstable): Added unstable API guard function.
	(__check_function): New function to check if function is defined.
	(__src_prep) [UNSTABLE]: Run src_unpack_hook in original source tree.
	(__show_version): Update license notice.

	* bin/prep_gnu_info.sh:
	Accept RESTRICT=postinst-info to not add install-info postinst command.

	* CYGWIN-PATCHES/README:
	* bin/Makefile.am: